FIX _ z-index

--- a/src/components/Main/parts/WeekView/parts/OneDayPicker.module.scss
+++ b/src/components/Main/parts/WeekView/parts/OneDayPicker.module.scss
@@ -11,6 +11,7 @@
   position: absolute;
   top: 2.75rem;
   left: 0;
+  z-index: 1;
 }
 .wrapIcon {
   width: 2rem;
